correction z-index zone notif

--- a/client/css/screen-map.css
+++ b/client/css/screen-map.css
@@ -44,21 +44,21 @@
 }
 
 #label{
-  z-index:4;
+  z-index:5;
   position: absolute;
   bottom:3px;
   left: 5px;
 }
 
 #onglet{
-  z-index:3;
+  z-index:4;
   position: absolute;
   bottom: 0px;
   left: 0px;
 }
 
 #bras_onglet{
-  z-index:2;
+  z-index:3;
   position: absolute;
   bottom: 0px;
   left: 0px;
@@ -67,7 +67,7 @@
 }
 
 #zone-notif{
-  z-index: 1;
+  z-index: 2;
   position: absolute;
   bottom:0px;
   left:0px;
